--- a/grabc/OLVASSEL.html
+++ b/grabc/OLVASSEL.html
@@ -31,7 +31,7 @@ Telepítenünk kell a következőket mielőtt fordítani tudunk:</p>
 
 <p>Utána:
 <pre>
-$ make
+pi@rpi ~/work/sf_basler/grabc $ make
 </pre>
 
 Ha a fordítás közben nem történt hiba, akkor az aktuális könyvtárban most van egy <code>grabc</code> nevű futtatható fájl.
@@ -42,29 +42,29 @@ Először ellenőrizzük az elérési útvonalakat a <code>grabc.sh</code> fájl
 Szintén ellenőrizzük, hogy a felhasználó akinek a nevében futni fog a szolgáltatás, létezik-e.
 Majd másoljuk a helyére a szkriptet:
 <pre>
-$ sudo cp grabc.sh /etc/init.d/grabc
-$ sudo chmod +x /etc/init.d/grabc
+pi@rpi ~/work/sf_basler/grabc $ sudo cp grabc.sh /etc/init.d/grabc
+pi@rpi ~/work/sf_basler/grabc $ sudo chmod +x /etc/init.d/grabc
 </pre>
 Ezután hozzáadjuk a szkriptet mint új szolgáltatást a rendszer szolgáltatásaihoz:
 <pre>
-$ sudo update-rc.d grabc defaults
+pi@rpi ~/work/sf_basler/grabc $ sudo update-rc.d grabc defaults
 </pre>
 
 A hibakeresés segítése érdekében kapcsoljuk be a core dump írást az adott felhasználó részére:
 <pre>
-$ ulimit -c unlimited
+pi@rpi ~/work/sf_basler/grabc $ ulimit -c unlimited
 </pre>
 
 Ellenőrzésképpen indítsuk el a szolgáltatást:
 <pre>
-$ sudo service grabc start
+pi@rpi ~/work/sf_basler/grabc $ sudo service grabc start
 </pre>
 
 A program a kimenetét a log-fájlba írja, a log-fájl elérési útvonala a <code>grabc.sh</code>-ban található.
 A log-fájl alapból a program telepítési könyvtárában <code>logs/grabc.log</code> útvonalon található. Megtekintése:
 
 <pre>
-$ tail -f logs/grabc.log
+pi@rpi ~/work/sf_basler/grabc $ tail -f logs/grabc.log
 </pre>
 </p>
 
